--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,31 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>process-test-resources</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<copy todir="target/test-classes" flatten="true">
+									<fileset dir="target/nar">
+										<include name="**/lib/${nar.aol}/shared/*.so"/>
+										<include name="**/lib/${nar.aol}/shared/*.dylib"/>
+										<include name="**/bin/${nar.aol}/xml2brl"/>
+										<include name="**/bin/${nar.aol}/xml2brl.exe"/>
+										<include name="**/bin/${nar.aol}/*.dll"/>
+									</fileset>
+								</copy>
+							</tasks>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>shell-maven-plugin</artifactId>
 				<configuration>
@@ -170,32 +195,25 @@
 								sed \
 								-e 's|\${prefix}|${project.build.directory}/nar|' \
 								louis-${liblouis.version}-${nar.aol}-shared/lib/${nar.aol}/shared/pkgconfig/liblouis.pc > pkgconfig/liblouis.pc
+								sed \
+								-e 's|\${prefix}|${project.build.directory}/nar|' \
+								xml2-${libxml2.version}-${nar.aol}-shared/lib/${nar.aol}/shared/pkgconfig/libxml-2.0.pc > pkgconfig/libxml-2.0.pc
 							</script>
 						</configuration>
 					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
 					<execution>
-						<id>test</id>
+						<id>run-test</id>
 						<phase>test</phase>
 						<goals>
-							<goal>run</goal>
+							<goal>shell</goal>
 						</goals>
 						<configuration>
-							<tasks>
-								<copy todir="target/test-classes" flatten="true">
-									<fileset dir="target/nar">
-										<include name="**/lib/*.so"/>
-										<include name="**/lib/*.dylib"/>
-										<include name="**/bin/xml2brl"/>
-									</fileset>
-								</copy>
-								<chmod file="target/test-classes/test" perm="+x"/>
-								<exec executable="target/test-classes/test"/>
-							</tasks>
+							<workDir>target/test-classes</workDir>
+							<script>
+								#!/bin/sh
+								chmod +x xml2brl
+								./xml2brl -f ./config.cfg input.xml
+							</script>
 						</configuration>
 					</execution>
 				</executions>
