--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<liblouis.version>2.3.0-odt2braille-0.1.1-SNAPSHOT</liblouis.version>
+		<libxml2.version>2.7.3</libxml2.version>
 		<nar.arch.option/>
 		<nar.install_name.option/>
 		<nar.rpath.option/>
+		<nar.host.option/>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,6 +47,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.8.1</version>
 				<executions>
 					<execution>
 						<id>checkout-sources</id>
@@ -54,8 +57,8 @@
 						</goals>
 						<configuration>
 							<connectionUrl>scm:git:git://github.com/bertfrees/liblouisxml.git</connectionUrl>
-							<scmVersion>odt2braille-0.1.1</scmVersion>
-							<scmVersionType>tag</scmVersionType>
+							<scmVersion>odt2braille</scmVersion>
+							<scmVersionType>branch</scmVersionType>
 							<skipCheckoutIfExists>true</skipCheckoutIfExists>
 						</configuration>
 					</execution>
@@ -66,7 +69,7 @@
 				<version>2.1-SNAPSHOT</version>
 				<extensions>true</extensions>
 				<configuration>
-					<skipUnpackProcessing>true</skipUnpackProcessing>
+					<gnuConfigureArgs>${nar.host.option}</gnuConfigureArgs>
 					<libraries>
 						<library>
 							<type>shared</type>
@@ -74,6 +77,13 @@
 					</libraries>
 				</configuration>
 				<executions>
+					<execution>
+						<id>default-nar-unpack</id>
+						<configuration>
+							<layout>org.apache.maven.plugin.nar.NarLayout20</layout>
+							<skipUnpackProcessing>true</skipUnpackProcessing>
+						</configuration>
+					</execution>
 					<execution>
 						<id>default-nar-gnu-resources</id>
 						<phase>none</phase>
@@ -111,6 +121,7 @@
 								<resource>
 									<directory>target/nar/gnu/${nar.aol}/target/lib</directory>
 									<includes>
+										<include>*.dll.a</include>
 										<include>pkgconfig/*</include>
 									</includes>
 								</resource>
@@ -122,6 +133,20 @@
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
+					<execution>
+						<id>process-sources</id>
+						<phase>process-sources</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<tasks>
+								<replace dir="target/nar/lib/${nar.aol}/shared/pkgconfig">
+									<replacefilter token="@NAR@" value="${project.build.directory}/nar"/>
+								</replace>
+							</tasks>
+						</configuration>
+					</execution>
 					<execution>
 						<id>process-test-resources</id>
 						<phase>process-test-resources</phase>
@@ -168,41 +193,21 @@
 								-e 's|^\(AC_INIT(liblouisxml,\).*\(,.*\)$|\1 ${project.version}\2|' \
 								-e '/^AC_INIT.*$/a\
 								CFLAGS="$CFLAGS ${nar.arch.option}"\
-								export PKG_CONFIG_PATH="${project.build.directory}/nar/pkgconfig"\
+								export PKG_CONFIG_PATH="${project.build.directory}/nar/lib/${nar.aol}/shared/pkgconfig"\
 								' \
 								../../target/checkout/configure.ac > configure.ac
 								sed \
 								-e '/^prefix=/d' \
 								-e '/^exec_prefix=/d' \
-								-e 's|@libdir@|${prefix}/louisxml-${project.version}-${nar.aol}-shared/lib/${nar.aol}/shared|' \
-								-e 's|@includedir@|${prefix}/louisxml-${project.version}-noarch/include|' \
-								-e 's|@VERSION@|${project.version}|' \
+								-e '/^lbxdir=/d' \
+								-e 's|@libdir@|@NAR@/lib/${nar.aol}/shared|' \
+								-e 's|@includedir@|@NAR@/include|' \
 								../../target/checkout/liblouisxml.pc.in > liblouisxml.pc.in
 							</script>
 						</configuration>
 					</execution>
 					<execution>
-						<id>process-pkgconfig</id>
-						<phase>process-sources</phase>
-						<goals>
-							<goal>shell</goal>
-						</goals>
-						<configuration>
-							<workDir>target/nar</workDir>
-							<script>
-								#!/bin/sh
-								mkdir pkgconfig
-								sed \
-								-e 's|\${prefix}|${project.build.directory}/nar|' \
-								louis-${liblouis.version}-${nar.aol}-shared/lib/${nar.aol}/shared/pkgconfig/liblouis.pc > pkgconfig/liblouis.pc
-								sed \
-								-e 's|\${prefix}|${project.build.directory}/nar|' \
-								xml2-${libxml2.version}-${nar.aol}-shared/lib/${nar.aol}/shared/pkgconfig/libxml-2.0.pc > pkgconfig/libxml-2.0.pc
-							</script>
-						</configuration>
-					</execution>
-					<execution>
-						<id>run-test</id>
+						<id>test</id>
 						<phase>test</phase>
 						<goals>
 							<goal>shell</goal>
@@ -266,6 +271,121 @@
 			<properties>
 				<nar.install_name.option>-Wl,-install_name,@loader_path/liblouisxml.dylib</nar.install_name.option>
 			</properties>
+		</profile>
+		<profile>
+			<id>windows</id>
+			<activation>
+				<property>
+					<name>host.os</name>
+					<value>mingw32</value>
+				</property>
+			</activation>
+			<properties>
+				<nar.arch.option></nar.arch.option>
+				<nar.rpath.option></nar.rpath.option>
+				<nar.install_name.option></nar.install_name.option>
+				<nar.host.option>--host ${os.arch}-${host.os}</nar.host.option>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-nar-plugin</artifactId>
+						<configuration>
+							<os>Windows</os>
+							<linker>
+								<name>${host.os}_gpp</name>
+							</linker>
+						</configuration>
+						<executions>
+							<execution>
+								<id>default-nar-validate</id>
+								<phase>none</phase>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>unpack-libxml2</id>
+								<phase>generate-sources</phase>
+								<goals>
+									<goal>unpack</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>org.xmlsoft</groupId>
+											<artifactId>xml2</artifactId>
+											<version>${libxml2.version}</version>
+											<classifier>noarch</classifier>
+											<type>nar</type>
+											<outputDirectory>target/nar</outputDirectory>
+										</artifactItem>
+										<artifactItem>
+											<groupId>org.xmlsoft</groupId>
+											<artifactId>xml2</artifactId>
+											<version>${libxml2.version}</version>
+											<classifier>${nar.aol}-shared</classifier>
+											<type>nar</type>
+											<outputDirectory>target/nar</outputDirectory>
+										</artifactItem>
+									</artifactItems>
+								</configuration>
+							</execution>
+							<execution>
+								<id>unpack-dlls</id>
+								<phase>generate-test-resources</phase>
+								<goals>
+									<goal>unpack</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>org.liblouis</groupId>
+											<artifactId>louis</artifactId>
+											<classifier>${nar.aol}-executable</classifier>
+											<type>nar</type>
+											<outputDirectory>target/nar</outputDirectory>
+										</artifactItem>
+										<artifactItem>
+											<groupId>org.xmlsoft</groupId>
+											<artifactId>xml2</artifactId>
+											<version>${libxml2.version}</version>
+											<classifier>${nar.aol}-executable</classifier>
+											<type>nar</type>
+											<outputDirectory>target/nar</outputDirectory>
+										</artifactItem>
+									</artifactItems>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>shell-maven-plugin</artifactId>
+						<configuration>
+							<chmod>true</chmod>
+						</configuration>
+						<executions>
+							<execution>
+								<id>test</id>
+								<phase>test</phase>
+								<goals>
+									<goal>shell</goal>
+								</goals>
+								<configuration>
+									<workDir>target/test-classes</workDir>
+									<script>
+										#!/bin/sh
+										wine xml2brl.exe -f .\\config.cfg input.xml
+									</script>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 	<pluginRepositories>
