--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<liblouis.version>2.3.0-odt2braille-0.1.1-SNAPSHOT</liblouis.version>
-		<libxml2.version>2.7.3</libxml2.version>
+		<libxml2.version>2.7.3-SNAPSHOT</libxml2.version>
 		<nar.arch.option/>
 		<nar.install_name.option/>
 		<nar.rpath.option/>
@@ -318,7 +318,7 @@
 								<configuration>
 									<artifactItems>
 										<artifactItem>
-											<groupId>org.xmlsoft</groupId>
+											<groupId>org.daisy.libs</groupId>
 											<artifactId>xml2</artifactId>
 											<version>${libxml2.version}</version>
 											<classifier>noarch</classifier>
@@ -326,7 +326,7 @@
 											<outputDirectory>target/nar</outputDirectory>
 										</artifactItem>
 										<artifactItem>
-											<groupId>org.xmlsoft</groupId>
+											<groupId>org.daisy.libs</groupId>
 											<artifactId>xml2</artifactId>
 											<version>${libxml2.version}</version>
 											<classifier>${nar.aol}-shared</classifier>
@@ -352,7 +352,7 @@
 											<outputDirectory>target/nar</outputDirectory>
 										</artifactItem>
 										<artifactItem>
-											<groupId>org.xmlsoft</groupId>
+											<groupId>org.daisy.libs</groupId>
 											<artifactId>xml2</artifactId>
 											<version>${libxml2.version}</version>
 											<classifier>${nar.aol}-executable</classifier>
@@ -412,7 +412,7 @@
 								<configuration>
 									<artifactItems>
 										<artifactItem>
-											<groupId>org.xmlsoft</groupId>
+											<groupId>org.daisy.libs</groupId>
 											<artifactId>xml2</artifactId>
 											<version>${libxml2.version}</version>
 											<classifier>noarch</classifier>
@@ -420,7 +420,7 @@
 											<outputDirectory>target/nar</outputDirectory>
 										</artifactItem>
 										<artifactItem>
-											<groupId>org.xmlsoft</groupId>
+											<groupId>org.daisy.libs</groupId>
 											<artifactId>xml2</artifactId>
 											<version>${libxml2.version}</version>
 											<classifier>${nar.aol}-shared</classifier>
